--- a/.github/workflows/is_organization.yml
+++ b/.github/workflows/is_organization.yml
@@ -3,7 +3,7 @@ name: Is Organization Member Example
 #on:
 #  issues:
 #    types: [opened, labeled]
-on: pull_request
+on: push
 
 jobs:
   is_organization:
