--- a/.github/workflows/is_organization.yml
+++ b/.github/workflows/is_organization.yml
@@ -12,10 +12,10 @@ jobs:
     steps:
       - name: Check if organization member
         id: is_organization_member
-        if: github.event.action == 'opened'
+        #if: github.event.action == 'opened'
         uses: jamessingleton/is-organization-member@1.0.0
         with:
-          organization: testorg
+          organization: OperationsYU
           username: ${{ github.event.issue.user.login }}
           token: ${{ secrets.GITHUB_TOKEN }}
       - name: Create Comment
