--- a/.github/workflows/is_organization.yml
+++ b/.github/workflows/is_organization.yml
@@ -16,7 +16,8 @@ jobs:
         uses: jamessingleton/is-organization-member@1.0.0
         with:
           organization: OperationsYU
-          username: ${{ github.event.issue.user.login }}
+          #username: ${{ github.event.issue.user.login }}
+          username: fish9167
           token: ${{ secrets.GITHUB_TOKEN }}
       - name: Create Comment
         if: |
