--- a/.github/workflows/is_organization.yml
+++ b/.github/workflows/is_organization.yml
@@ -22,4 +22,8 @@ jobs:
       - name: Create Comment
         if: |
           steps.is_organization_member.outputs.result == false
+          uses: andymckay/labeler@master
+            with:
+              add-labels: "needs-triage, bug"
+              #remove-labels: "in progress"
         run: echo User Does Not Belong to testorg
