--- a/.github/workflows/automation_labels.yml
+++ b/.github/workflows/automation_labels.yml
@@ -13,7 +13,7 @@ jobs:
         uses: jamessingleton/is-organization-member@1.0.0
         with:
           organization: OperationsYU
-          username: ${{ github.event.issue.user.login }}
+          username: ${{ github.event.pull_request.user.login }}
           token: ${{ secrets.GITHUB_TOKEN }}
 
       - name: add_label
