--- a/.github/workflows/automation_labels.yml
+++ b/.github/workflows/automation_labels.yml
@@ -17,7 +17,7 @@ jobs:
           token: ${{ secrets.GITHUB_TOKEN }}
 
       - name: add_label
-        if: steps.is_organization_member.outputs.result == true
+        if: steps.is_organization_member.outputs.result == false
         uses: andymckay/labeler@master
         with:
           add-labels: "contribution"
