--- a/.github/workflows/automation_labels.yml
+++ b/.github/workflows/automation_labels.yml
@@ -15,9 +15,11 @@ jobs:
           organization: OperationsYU
           username: ${{ github.event.pull_request.user.login }}
           token: ${{ secrets.GITHUB_TOKEN }}
+        run: |
+          echo ${{ github.event.pull_request.user.login }}
 
-      - name: add_label
-        if: steps.is_organization_member.outputs.result == true
+      - name: Add label
+        if: steps.is_organization_member.outputs.result == false
         uses: andymckay/labeler@master
         with:
           add-labels: "contribution"
