--- a/.github/workflows/automation_labels.yml
+++ b/.github/workflows/automation_labels.yml
@@ -15,9 +15,10 @@ jobs:
           organization: OperationsYU
           username: ${{ github.event.pull_request.user.login }}
           token: ${{ secrets.GITHUB_TOKEN }}
+
+      - name: Echo username
         run: |
           echo ${{ github.event.pull_request.user.login }}
-
       - name: Add label
         if: steps.is_organization_member.outputs.result == false
         uses: andymckay/labeler@master
