--- a/.github/workflows/automation_labels.yml
+++ b/.github/workflows/automation_labels.yml
@@ -21,7 +21,7 @@ jobs:
           echo ${{ github.event.pull_request.user.login }}
 
       - name: Add label
-        if: steps.is_organization_member.outputs.result == false
+        if: steps.is_organization_member.outputs.result == true
         uses: andymckay/labeler@master
         with:
           add-labels: "contribution"
