--- a/.github/workflows/automation_labels.yml
+++ b/.github/workflows/automation_labels.yml
@@ -20,10 +20,11 @@ jobs:
         run: |
           echo ${{ github.event.pull_request.user.login }}
           echo ${{ steps.is_organization_member.outputs.result }}
-          echo steps.is_organization_member.outputs.result
 
       - name: Add label
-        if: steps.is_organization_member.outputs.result == false
-        uses: andymckay/labeler@master
-        with:
-          add-labels: "contribution"
+        if: |
+          steps.is_organization_member.outputs.result == false
+        run: echo User Does Not Belong to testorg
+        #uses: andymckay/labeler@master
+        #with:
+        #  add-labels: "contribution"
