--- a/.github/workflows/automation_labels.yml
+++ b/.github/workflows/automation_labels.yml
@@ -13,7 +13,8 @@ jobs:
         uses: jamessingleton/is-organization-member@1.0.0
         with:
           organization: OperationsYU
-          username: ${{ github.event.pull_request.user.login }}
+          #username: ${{ github.event.pull_request.user.login }}
+          username: 123456
           token: ${{ secrets.GITHUB_TOKEN }}
 
       - name: Echo username
