--- a/.github/workflows/automation_labels.yml
+++ b/.github/workflows/automation_labels.yml
@@ -22,9 +22,9 @@ jobs:
           echo ${{ steps.is_organization_member.outputs.result }}
 
       - name: Add label
-        #if: |
-        #  steps.is_organization_member.outputs.result == true
-        run: echo User Does Not Belong to testorg
-        #uses: andymckay/labeler@master
-        #with:
-        #  add-labels: "contribution"
+        if: |
+          steps.is_organization_member.outputs.result == true
+        uses: andymckay/labeler@master
+        with:
+          add-labels: "contribution"
+          run: echo User Does Not Belong to testorg          
