--- a/.github/workflows/automation_labels.yml
+++ b/.github/workflows/automation_labels.yml
@@ -20,11 +20,10 @@ jobs:
         run: |
           echo ${{ github.event.pull_request.user.login }}
           echo ${{ steps.is_organization_member.outputs.result }}
-
       - name: Add label
         if: |
-          steps.is_organization_member.outputs.result == true
+          steps.is_organization_member.outputs.result == false
         uses: andymckay/labeler@master
         with:
           add-labels: "contribution"
-          run: echo User Does Not Belong to testorg          
+          run: echo User Does Not Belong to Organization
