--- a/.github/workflows/automation_labels.yml
+++ b/.github/workflows/automation_labels.yml
@@ -23,8 +23,8 @@ jobs:
           echo ${{ steps.is_organization_member.outputs.result }}
 
       - name: Add contribution label
-        if: |
-          steps.is_organization_member.outputs.result == false
+        #if: |
+        #  steps.is_organization_member.outputs.result == false
         uses: OperationsYU/labeler@master
         with:
           add-labels: "contribution"
