--- a/.github/workflows/organization.yml
+++ b/.github/workflows/organization.yml
@@ -23,4 +23,5 @@ jobs:
       - name: Add contribution label
         if: |
           steps.is_organization_member.outputs.result == false
+        run: echo User Does Not Belong to Organization
 
