--- a/.github/workflows/organization.yml
+++ b/.github/workflows/organization.yml
@@ -21,6 +21,11 @@ jobs:
 
       - name: Add contribution label
         if: |
+          steps.is_organization_member.outputs.result == true
+        run: echo User Does Not Belong to Organization
+        
+      - name: Add contribution label
+        if: |
           steps.is_organization_member.outputs.result == false
         run: echo User Does Not Belong to Organization
 
