--- a/.github/workflows/organization.yml
+++ b/.github/workflows/organization.yml
@@ -20,12 +20,10 @@ jobs:
           echo ${{ steps.is_organization_member.outputs.result }}
 
       - name: Add contribution label
-        if: |
-          steps.is_organization_member.outputs.result == true
+        if: steps.is_organization_member.outputs.result
         run: echo User Does Not Belong to Organization
         
       - name: Add contribution label
-        if: |
-          steps.is_organization_member.outputs.result == false
+        if: steps.is_organization_member.outputs.result
         run: echo User Does Not Belong to Organization
 
