--- a/.github/workflows/organization.yml
+++ b/.github/workflows/organization.yml
@@ -20,7 +20,7 @@ jobs:
           echo ${{ steps.is_organization_member.outputs.result }}
 
       - name: Add contribution label
-        if: steps.is_organization_member.outputs.result == "flase"
+        if: steps.is_organization_member.outputs.result == 'flase'
         run: echo User Does Not Belong to Organization
         
       - name: Add contribution label
