--- a/.github/workflows/list_pr.yml
+++ b/.github/workflows/list_pr.yml
@@ -11,6 +11,8 @@ jobs:
         id: list
         with:
           token: ${{secrets.ACCESS_TOKEN}}
+          labels: '["contribution"]'
+          hour: '0'
       - name: output
         run: echo ${{ steps.list.outputs.pulls }}
         
