--- a/.github/workflows/list_pr.yml
+++ b/.github/workflows/list_pr.yml
@@ -11,7 +11,7 @@ jobs:
         id: list
         with:
           token: ${{secrets.ACCESS_TOKEN}}
-          labels: '["*"]'
+          #labels: '["*"]'
           skip_hour: '0'
       - name: output
         run: echo ${{ steps.list.outputs.pulls }}
