--- a/.github/workflows/py.yml
+++ b/.github/workflows/py.yml
@@ -19,4 +19,6 @@ jobs:
       - name: run py
         run: |
           python -u list_pull.py
-     
+      - name: run sh
+        run: |
+          curl -H "Accept: application/vnd.github.v3+json" https://github.com/cocos-creator/engine/pulls
