--- a/.github/workflows/py.yml
+++ b/.github/workflows/py.yml
@@ -14,7 +14,7 @@ jobs:
 
       - name:  install
         run: |
-          pip3 install requests
+          pip3 install requests githup
 
       - name: run py
         run: |
