--- a/.github/workflows/automation_labels.yml
+++ b/.github/workflows/automation_labels.yml
@@ -6,6 +6,9 @@ on: pull_request_target
 
 jobs:
   automate-labels:
+    concurrency: 
+      group: ${{ github.head_ref }}
+      cancel-in-progress: true
     runs-on: ubuntu-latest
     steps:
       - name: Check organization
