--- a/.github/workflows/automation_labels.yml
+++ b/.github/workflows/automation_labels.yml
@@ -27,7 +27,7 @@ jobs:
 
       - name: Add contribution label
         if: |
-          steps.is_organization_member.outputs.result == 'false'
+          steps.is_organization_member.outputs.result == false
         uses: OperationsYU/labeler@master
         with:
           add-labels: "contribution"
