--- a/.github/workflows/automation_labels.yml
+++ b/.github/workflows/automation_labels.yml
@@ -1,8 +1,8 @@
 name: automation-labels
 
-on: pull_request_target
-#  pull_request:
-#    types: [opened]
+on:
+  pull_request_target:
+    types: [opened]
 
 jobs:
   automate-labels:
@@ -13,7 +13,6 @@ jobs:
     steps:
       - name: Check organization
         id: is_organization_member
-        if: github.event.action == 'opened'
         uses: OperationsYU/is-organization-member@master
         with:
           organization: OperationsYU
