--- a/.github/workflows/organization.yml
+++ b/.github/workflows/organization.yml
@@ -8,28 +8,18 @@ jobs:
     steps:
       - name: Check organization
         id: is_organization_member
-        uses: OperationsYU/is-organization-member@1.1.0
+        uses: actions/github-script@v2
         with:
-          organization: OperationsYU
-          username: fish9167
-          #token: ${{ secrets.ACCESS_TOKEN }}
-          token: ${{ secrets.GITHUB_TOKEN }}
+          github-token: ${{secrets.GITHUB_TOKEN}}
+          script: |
+              const response = await octokit.rest.orgs.blockUser({
+              "OperationsYU",
+              "fish0607",
+            });
+            return "Hello!"
+            result-encoding: string
 
-      - name: Echo username organization
-        run: |
-          echo ${{ github.event.push.user.login }}
-          echo ${{ steps.is_organization_member.outputs.result }}
+      - name: echo result
+        run:
+          echo "${{steps.is_organization_member.outputs.result}}" 
 
-      - name: Check organization2
-        id: is_organization_member2
-        uses: OperationsYU/is-organization-member@1.1.0
-        with:
-          organization: OperationsYU
-          username: fish0607
-          #token: ${{ secrets.ACCESS_TOKEN }}
-          token: ${{ secrets.GITHUB_TOKEN }}
-
-      - name: Echo username organization2
-        run: |
-          echo ${{ github.event.push.user.login }}
-          echo ${{ steps.is_organization_member2.outputs.result }}
