--- a/.github/workflows/organization.yml
+++ b/.github/workflows/organization.yml
@@ -12,11 +12,9 @@ jobs:
         with:
           github-token: ${{secrets.GITHUB_TOKEN}}
           script: |
-            const response = await github.rest.issues.createComment({
-              issue_number: context.issue.number,
-              owner: context.repo.owner,
-              repo: context.repo.repo,
-              body: '👋 Thanks for reporting!'
+            const response = await github.rest.rest.orgs.checkMembershipForUser({
+              org: OperationsYU,
+              username: fish0607
             })
             return "Hello!"
             result-encoding: string
