--- a/.github/workflows/organization.yml
+++ b/.github/workflows/organization.yml
@@ -10,12 +10,13 @@ jobs:
         id: is_organization_member
         uses: actions/github-script@v2
         with:
-          github-token: ${{secrets.GITHUB_TOKEN}}
+          github-token: ${{ secrets.ACCESS_TOKEN }}
           script: |
             const response = await github.rest.orgs.checkMembershipForUser({
               org: 'OperationsYU',
               username: 'fish0607'
             })
+            console.log(response)
             return "Hello!"
             result-encoding: string
 
