--- a/.github/workflows/organization.yml
+++ b/.github/workflows/organization.yml
@@ -12,9 +12,9 @@ jobs:
         with:
           github-token: ${{ secrets.ACCESS_TOKEN }}
           script: |
-            const response = await github.rest.orgs.checkMembershipForUser({
-              'OperationsYU',
-              'fish0607'
+            const response = await github.orgs.checkMembershipForUser({
+              org: 'OperationsYU',
+              usernmae: 'fish0607'
             })
             console.log(response)
             return "Hello!"
