--- a/.github/workflows/organization.yml
+++ b/.github/workflows/organization.yml
@@ -10,9 +10,9 @@ jobs:
         id: is_organization_member
         uses: actions/github-script@v5
         with:
-          github-token: ${{ secrets.ACCESS_TOKEN }}
+          #github-token: ${{ secrets.ACCESS_TOKEN }}
           script: |
-            const response = await github.orgs.checkMembershipForUser({
+            const response = await github.rest.orgs.checkMembershipForUser({
               org: 'OperationsYU',
               usernmae: 'fish0607'
             })
