--- a/.github/workflows/organization.yml
+++ b/.github/workflows/organization.yml
@@ -9,7 +9,12 @@ jobs:
       - name: run curl
         run: |
           echo `curl -H "Accept: application/vnd.github.v3+json" https://api.github.com/orgs/OperationsYU/members/fish0607`
+          echo "======"
           echo `curl -H "Authorization: ${{ secrets.ACCESS_TOKEN }}" -H "Accept: application/vnd.github.v3+json" https://api.github.com/orgs/OperationsYU/members/fish0607`
+          echo "======"          
+          echo `curl -H "Accept: application/vnd.github.v3+json" https://api.github.com/orgs/OperationsYU/members/fish9167`
+          echo "======"          
+          echo `curl -H "Authorization: ${{ secrets.ACCESS_TOKEN }}" -H "Accept: application/vnd.github.v3+json" https://api.github.com/orgs/OperationsYU/members/fish9167`          
         
           
       - name: Check organization
