--- a/.github/workflows/organization.yml
+++ b/.github/workflows/organization.yml
@@ -22,13 +22,11 @@ jobs:
         with:
           #github-token: ${{ secrets.ACCESS_TOKEN }}
           script: |
-            const response = await octokit.request('GET /orgs/{org}/members/{username}', {
-              org: 'OperationsYU',
-              usernmae: 'fish0607'
+            const response = await octokit.request('DELETE /orgs/{org}/members/{username}', {
+            org: 'OperationsYU',
+            username: 'fish0607'
             })
             console.log(response)
-            #return "Hello!"
-            #result-encoding: string
 
       - name: echo result
         run:
