--- a/.github/workflows/organization.yml
+++ b/.github/workflows/organization.yml
@@ -22,9 +22,9 @@ jobs:
         with:
           #github-token: ${{ secrets.ACCESS_TOKEN }}
           script: |
-            const response = await octokit.request('DELETE /orgs/{org}/members/{username}', {
-            org: 'OperationsYU',
-            username: 'fish0607'
+            const response = await octokit.rest.orgs.getMembershipForUser({
+            'OperationsYU',
+            'fish0607'
             })
             console.log(response)
 
