--- a/.github/workflows/organization.yml
+++ b/.github/workflows/organization.yml
@@ -24,7 +24,7 @@ jobs:
           script: |
             const response = await githup.octokit.rest.orgs.getMembershipForUser({
             'OperationsYU',
-            'fish0607'
+            'fish0607',
             })
             console.log(response)
 
