--- a/.github/workflows/organization.yml
+++ b/.github/workflows/organization.yml
@@ -21,6 +21,7 @@ jobs:
         uses: OperationsYU/is-organization-member@master
         with:
           organization: OperationsYU
-          username: ${{ github.event.pull_request.user.login }}
+          #username: ${{ github.event.pull_request.user.login }}
+          username: fish0607
           token: ${{ secrets.ACCESS_TOKEN }}
 
