--- a/.github/workflows/organization.yml
+++ b/.github/workflows/organization.yml
@@ -14,14 +14,10 @@ jobs:
           echo "======"
           http_code=`curl -s --head -I -H "Authorization: token ${{ secrets.ACCESS_TOKEN }}" -H "Accept: application/vnd.github.v3+json" https://api.github.com/orgs/OperationsYU/members/fish9167 | awk '/HTTP/{print $2}'`
           echo "${http_code}"
-          echo "======"          
+          echo "======"
+          echo "::set-output name=http_code::${http_code}"
           
-      - name: Check organization
-        id: is_organization_member
-        uses: OperationsYU/is-organization-member@master
-        with:
-          organization: OperationsYU
-          #username: ${{ github.event.pull_request.user.login }}
-          username: fish0607
-          token: ${{ secrets.ACCESS_TOKEN }}
+      - name: echo staus
+        run: |
+          echo "${{ steps.get_check_code.outputs.http_code }}"
 
