--- a/.github/workflows/automation_labels.yml
+++ b/.github/workflows/automation_labels.yml
@@ -12,30 +12,26 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Check organization
-        id: is_organization_member
-        uses: OperationsYU/is-organization-member@1.0.0
-        with:
-          organization: OperationsYU
-          username: ${{ github.event.pull_request.user.login }}
-          token: ${{ secrets.ACCESS_TOKEN }}
+        id: get_check_code
+        run: |
+          http_code=`curl -s --head -I -H "Authorization: token ${{ secrets.ACCESS_TOKEN }}" -H "Accept: application/vnd.github.v3+json" https://api.github.com/orgs/OperationsYU/members/${{ github.event.pull_request.user.login }} | awk '/HTTP/{print $2}'`
+          echo "::set-output name=http_code::${http_code}"
 
       - name: Echo username organization
         run: |
           echo ${{ github.event.pull_request.user.login }}
-          echo ${{ steps.is_organization_member.outputs.result }}
-          sleep 10s
+          echo ${{ steps.get_check_code.outputs.result }}
 
       - name: Add contribution label
         if: |
-          ${{steps.is_organization_member.outputs.result}} == false
+          steps.get_check_code.outputs.result == "404"
         uses: OperationsYU/labeler@master
         with:
           add-labels: "contribution"
-          run: echo User Does Not Belong to Organization
 
       - name: assignment
         if: |
-          ${{steps.is_organization_member.outputs.result}} == true      
+          steps.get_check_code.outputs.result == "404"
         uses: OperationsYU/auto-assignment@v1
         with:
           token: ${{ secrets.ACCESS_TOKEN }}
