--- a/.github/workflows/automation_labels.yml
+++ b/.github/workflows/automation_labels.yml
@@ -24,14 +24,14 @@ jobs:
 
       - name: Add contribution label
         if: |
-          steps.get_check_code.outputs.result == "404"
+          steps.get_check_code.outputs.result == 404
         uses: OperationsYU/labeler@master
         with:
           add-labels: "contribution"
 
       - name: assignment
         if: |
-          steps.get_check_code.outputs.result == "404"
+          steps.get_check_code.outputs.result == 404
         uses: OperationsYU/auto-assignment@v1
         with:
           token: ${{ secrets.ACCESS_TOKEN }}
