--- a/.github/workflows/test-slefhost.yml
+++ b/.github/workflows/test-slefhost.yml
@@ -4,7 +4,7 @@ on: [push]
 
 jobs:
   slefhost:
-    runs-on: test-win01
+    runs-on: run-test-win01
     steps:
       - name: 'Checkout'
         uses: actions/checkout@v2
