--- a/.github/workflows/workflow_dispatch.yml
+++ b/.github/workflows/workflow_dispatch.yml
@@ -1,6 +1,15 @@
 name: workflow_dispatch
 on:
-  workflow_dispatch: {}
+  workflow_dispatch:
+    inputs:
+      branch:
+        description: 'test cases branch'
+        required: true
+        default: 'v3.4'
+      version:
+        description: 'creator version'
+        required: true
+        default: 'v3.4.1'
 
 jobs:
   build:
@@ -8,3 +17,7 @@ jobs:
 
     steps:
     - uses: actions/checkout@v2
+    - name: echo
+      run: |
+        echo "Hello ${{ github.event.inputs.branch }}!"
+        echo "- in ${{ github.event.inputs.version }}!"
