--- a/.github/workflows/test-slefhost.yml
+++ b/.github/workflows/test-slefhost.yml
@@ -9,4 +9,4 @@ jobs:
       - name: 'Checkout'
         uses: actions/checkout@v2
         with:
-          ssh-key: 'C:\Users\Administrator\.ssh\id_rsa'
+          ssh-key: ''
