--- a/.github/workflows/test-slefhost.yml
+++ b/.github/workflows/test-slefhost.yml
@@ -9,5 +9,5 @@ jobs:
       - name: 'Checkout'
         uses: actions/checkout@v2
         with:
-          ssh-key: 'C:\Users\Administrator\.ssh\id_rsa'
+          ssh-key: 'C:\Users\Administrator\.ssh\id_ed'
           submodules: true
