--- a/.github/workflows/at_robot.yml
+++ b/.github/workflows/at_robot.yml
@@ -1,15 +1,16 @@
 name: at_robot
 
-on: [pull_request]
+on: pull_request
 
 jobs:
-  at_robot:
-  if contains(github.event.comment.body, '@cocos-robot run test cases')
-  runs-on: ubuntu-latest
-  steps:
-    - uses: actions/checkout@v2
-      #with:
-      #  path: engine    
-    - name: run test cases
-      run: |
-         echo "call run test cases"
+  run_test_cases:
+    if: |
+      contains(github.event.comment.body, '@cocos-robot run test cases')
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v2
+        #with:
+        #  path: engine    
+      - name: run test cases
+        run: |
+          echo "call run test cases"
