--- a/.github/workflows/at_robot.yml
+++ b/.github/workflows/at_robot.yml
@@ -1,11 +1,14 @@
 name: at_robot
 
-on: pull_request
+on: 
+  pull_request:
+  issue_comment:
+    types: [created, edited]
 
 jobs:
   run_test_cases:
     if: |
-      contains(github.event.comment.body, '@cocos-robot run test cases')
+      github.event.issue.pull_request && contains(github.event.comment.body, '@cocos-robot run test cases')
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
