--- a/.github/workflows/at_robot.yml
+++ b/.github/workflows/at_robot.yml
@@ -2,13 +2,14 @@ name: at_robot
 
 on: 
   pull_request_review_comment:
+    types: [created, edited]
   issue_comment:
     types: [created, edited]
 
 jobs:
   run_test_cases:
     if: |
-      github.event.issue.pull_request && contains(github.event.comment.body, '@cocos-robot run test cases')
+      contains(github.event.comment.body, '@cocos-robot run test cases')
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
