--- a/.github/workflows/windows.yml
+++ b/.github/workflows/windows.yml
@@ -3,8 +3,8 @@ name: windows
 on: [push, pull_request]
 
 jobs:
-  list-pr:
-    runs-on: windows-2018
+  windows-2016:
+    runs-on: windows-2016
     steps:
     - uses: actions/checkout@v2
     - name: echo
